--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 PORT=8000
+secretKey = your-secret-key
+postgres=postgres://exobtibd:F_y7ZnW-hkP1jkZKhOsA_AVNpF8mrnuZ@rajje.db.elephantsql.com/exobtibd
