--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=8000
 secretKey = your-secret-key
-postgres=postgres://exobtibd:F_y7ZnW-hkP1jkZKhOsA_AVNpF8mrnuZ@rajje.db.elephantsql.com/exobtibd
+postgres=postgres://dhliqmeg:j6VHBbpLJvt2GZDVEeVKbqEU-cd2rl8u@batyr.db.elephantsql.com/dhliqmeg
